--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta name="title" content="Vantage" />
     <meta name="description" content="Vantage reconstructs the spatial context of video recordings." />
     
-		<link href="./_app/immutable/assets/0.B-wU069N.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.9e_zEQBr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D7_riIPW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DwD8CGpY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C9FWihKz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BP7RbBvP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.SuY3rpCw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Yzwz9Dcx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BArpSiJ7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BvFvupHY.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DYSV7gde.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/0waum1Sv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Ch9T7Mic.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BY7w2Zq6.js"><!--1uha8ag--><meta name="description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:title" content="Vantage"/> <meta property="og:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:image" content="/cover.jpg"/> <meta property="twitter:card" content="summary_large_image"/> <meta property="twitter:title" content="Vantage"/> <meta property="twitter:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="twitter:image" content="/cover.jpg"/><!----><title>Vantage</title>
+		<link href="/_app/immutable/assets/0.B-wU069N.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/2.9e_zEQBr.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.D7_riIPW.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DwD8CGpY.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C9FWihKz.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BP7RbBvP.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.SuY3rpCw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Yzwz9Dcx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BArpSiJ7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BvFvupHY.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.DYSV7gde.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/0waum1Sv.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/2.Ch9T7Mic.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BY7w2Zq6.js"><!--1uha8ag--><meta name="description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:title" content="Vantage"/> <meta property="og:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:image" content="/cover.jpg"/> <meta property="twitter:card" content="summary_large_image"/> <meta property="twitter:title" content="Vantage"/> <meta property="twitter:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="twitter:image" content="/cover.jpg"/><!----><title>Vantage</title>
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"><!--[--><!--[--><!----><!--[--><!----><div class="introContainer"><div class="fixed top-2 right-2 z-4 gap-1 flex flex-col items-end"><a href="https://thometnanni.github.io/vantage-renderer/" target="_blank" rel="noopener noreferrer" class="text-xs pointer-events-auto svelte-rl21xe">View a prototype</a> <a href="mailto:hi@thometnanni.net" class="text-xs pointer-events-auto svelte-rl21xe">Contact us</a></div> <!--[!--><!--]--> <!--[!--><!--]--><!----> <svg id="svgContainer" xmlns="http://www.w3.org/2000/svg"><g class="box-pair"><g class="box box-group rotate"><rect x="0" y="0" width="300" height="200"></rect></g><g class="lines"><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line></g><g class="box box-group box"><rect x="30%" y="200" width="65%" height="400"></rect></g></g></svg> <div class="info p-2"><div><p><strong>Vantage</strong> is a web-based software for <strong>spatial reconstruction of photos and videos</strong>, designed
@@ -50,8 +50,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D7_riIPW.js"),
-						import("./_app/immutable/entry/app.SuY3rpCw.js")
+						import("/_app/immutable/entry/start.D7_riIPW.js"),
+						import("/_app/immutable/entry/app.SuY3rpCw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
