--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name="title" content="Vantage" />
     <meta name="description" content="Vantage reconstructs the spatial context of video recordings." />
     
-		<link href="./_app/immutable/assets/0.B-wU069N.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.Dg9bhQG1.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.9e_zEQBr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CWggJ7Pn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C45ZWEa1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CLf1w6_u.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D8O2HDVe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C9FWihKz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BP7RbBvP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Cw8MNN4A.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CAbyuqGp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Yzwz9Dcx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BArpSiJ7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BvFvupHY.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DYSV7gde.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DtbpVpfi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/0waum1Sv.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.Ch9T7Mic.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BY7w2Zq6.js"><!--1uha8ag--><meta name="description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:title" content="Vantage"/> <meta property="og:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:image" content="/cover.jpg"/> <meta property="twitter:card" content="summary_large_image"/> <meta property="twitter:title" content="Vantage"/> <meta property="twitter:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="twitter:image" content="/cover.jpg"/><!----><title>Vantage</title>
@@ -43,15 +43,15 @@
 			
 			<script>
 				{
-					__sveltekit_1s35d80 = {
+					__sveltekit_bscljq = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CWggJ7Pn.js"),
-						import("./_app/immutable/entry/app.Cw8MNN4A.js")
+						import("./_app/immutable/entry/start.CLf1w6_u.js"),
+						import("./_app/immutable/entry/app.CAbyuqGp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
