--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     
 		<link href="./_app/immutable/assets/0.Dg9bhQG1.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.9e_zEQBr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CLf1w6_u.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D8O2HDVe.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B3IlPrMz.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DpycJZGs.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C9FWihKz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BP7RbBvP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CAbyuqGp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BvuRe5DI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Yzwz9Dcx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BArpSiJ7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BvFvupHY.js">
@@ -43,15 +43,15 @@
 			
 			<script>
 				{
-					__sveltekit_bscljq = {
+					__sveltekit_m9f47p = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CLf1w6_u.js"),
-						import("./_app/immutable/entry/app.CAbyuqGp.js")
+						import("./_app/immutable/entry/start.B3IlPrMz.js"),
+						import("./_app/immutable/entry/app.BvuRe5DI.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
