--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <meta name="title" content="Vantage" />
     <meta name="description" content="Vantage reconstructs the spatial context of video recordings." />
     
-		<link href="./_app/immutable/assets/0.Dg9bhQG1.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.zobUbncZ.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.9e_zEQBr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CPKZNkKq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dyxh8WKO.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.l5GemfLp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CHbhIKzx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C9FWihKz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BP7RbBvP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.YYHX-YoR.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CZJS-ekN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Yzwz9Dcx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BArpSiJ7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BvFvupHY.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DtbpVpfi.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BCXoy5lw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/0waum1Sv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Ch9T7Mic.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DIMe7Xjv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BY7w2Zq6.js"><!--1uha8ag--><meta name="description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:title" content="Vantage"/> <meta property="og:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:image" content="/cover.jpg"/> <meta property="twitter:card" content="summary_large_image"/> <meta property="twitter:title" content="Vantage"/> <meta property="twitter:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="twitter:image" content="/cover.jpg"/><!----><title>Vantage</title>
   </head>
   <body data-sveltekit-preload-data="hover">
@@ -43,15 +43,15 @@
 			
 			<script>
 				{
-					__sveltekit_pd7g53 = {
+					__sveltekit_kushf = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CPKZNkKq.js"),
-						import("./_app/immutable/entry/app.YYHX-YoR.js")
+						import("./_app/immutable/entry/start.l5GemfLp.js"),
+						import("./_app/immutable/entry/app.CZJS-ekN.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
