--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     
 		<link href="./_app/immutable/assets/0.zobUbncZ.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.9e_zEQBr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.l5GemfLp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CHbhIKzx.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DNtWtWIk.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DNJPxlxT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C9FWihKz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BP7RbBvP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CZJS-ekN.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B6tzp9Lj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Yzwz9Dcx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BArpSiJ7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BvFvupHY.js">
@@ -43,15 +43,15 @@
 			
 			<script>
 				{
-					__sveltekit_kushf = {
+					__sveltekit_vanlr2 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.l5GemfLp.js"),
-						import("./_app/immutable/entry/app.CZJS-ekN.js")
+						import("./_app/immutable/entry/start.DNtWtWIk.js"),
+						import("./_app/immutable/entry/app.B6tzp9Lj.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
