--- a/index.html
+++ b/index.html
@@ -7,24 +7,23 @@
     <meta name="title" content="Vantage" />
     <meta name="description" content="Vantage reconstructs the spatial context of video recordings." />
     
-		<link href="./_app/immutable/assets/0.zobUbncZ.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.DnF3e-rb.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.9e_zEQBr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DNtWtWIk.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DNJPxlxT.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BL16GjNI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B65gTas-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C9FWihKz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BP7RbBvP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B6tzp9Lj.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.FRg7JhgC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Yzwz9Dcx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BArpSiJ7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BvFvupHY.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BCXoy5lw.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D_664fTU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/0waum1Sv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DIMe7Xjv.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DAxBs-0D.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BY7w2Zq6.js"><!--1uha8ag--><meta name="description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:title" content="Vantage"/> <meta property="og:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:image" content="/cover.jpg"/> <meta property="twitter:card" content="summary_large_image"/> <meta property="twitter:title" content="Vantage"/> <meta property="twitter:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="twitter:image" content="/cover.jpg"/><!----><title>Vantage</title>
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents"><!--[--><!--[--><!----><!--[--><!----><div class="introContainer"><div class="fixed top-2 right-2 z-4 gap-1 flex flex-col items-end"><a href="https://thometnanni.github.io/vantage-renderer/" target="_blank" rel="noopener noreferrer" class="text-xs pointer-events-auto svelte-rl21xe">View a prototype</a> <a href="mailto:hi@thometnanni.net" class="text-xs pointer-events-auto svelte-rl21xe">Contact us</a></div> <!--[!--><!--]--> <!--[!--><!--]--><!----> <svg id="svgContainer" xmlns="http://www.w3.org/2000/svg"><g class="box-pair"><g class="box box-group rotate"><rect x="0" y="0" width="300" height="200"></rect></g><g class="lines"><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line></g><g class="box box-group box"><rect x="30%" y="200" width="65%" height="400"></rect></g></g></svg> <div class="info p-2"><div><p><strong>Vantage</strong> is a web-based software for <strong>spatial reconstruction of photos and videos</strong>, designed
-        for <strong>investigative journalists and fact-checkers</strong>,
+    <div style="display: contents"><!--[--><!--[--><!----><!--[--><!----><div class="introContainer"><div class="fixed top-2 right-2 z-4 gap-1 flex flex-col items-end"><a href="https://thometnanni.github.io/vantage-renderer/" target="_blank" rel="noopener noreferrer" class="text-xs pointer-events-auto svelte-rl21xe">Renderer</a> <a href="mailto:hi@thometnanni.net" class="text-xs pointer-events-auto svelte-rl21xe">Contact us</a></div> <!--[!--><!--]--> <!--[!--><!--]--><!----> <svg id="svgContainer" xmlns="http://www.w3.org/2000/svg"><g class="box-pair"><g class="box box-group rotate"><rect x="0" y="0" width="300" height="200"></rect></g><g class="lines"><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line></g><g class="box box-group box"><rect x="30%" y="200" width="65%" height="460"></rect></g></g></svg> <div class="info p-2"><div><p><strong>Vantage</strong> is a web-based suite of <strong>spatial reconstruction toolkits for analysing photos and videos</strong>, designed for <strong>investigative journalists and fact-checkers</strong>,
         particularly those working in small teams or independently.</p></div> <div><p>Images and videos sourced from social media often represent crucial
         working material — and, in conflict areas, sometimes the only available
         source.</p> <p>This persuasive visual material demands rigorous verification: do the
@@ -36,22 +35,22 @@
         requiring advanced skills in specialist software such as GIS, 3D
         modeling, and video editing, while offering little opportunity for
         collaboration.</p> <p>Vantage supports this laborious but essential process by bringing all
-        operational phases together in a unified, accessible web interface.</p> <p>Reconstructions can be exported as <strong>videos or interactive visualizations</strong>, supporting visual
+        operational phases together through accessible web-based interfaces.</p> <p>Reconstructions can be exported as <strong>videos or interactive visualizations</strong>, supporting visual
         storytelling in investigative journalism.</p></div> <div><p>Funded by <a class="link" href="https://prototypefund.de/project/vantage/" target="_blank" rel="noopener noreferrer">Prototype Fund</a>, <strong>Vantage is open-source and freely accessible</strong>,
         ensuring that investigative tools are within reach for everyone.</p> <p><a class="link" href="mailto:hi@thometnanni.net">Write us</a> for more
-        information, or follow our development on <a class="link" href="https://github.com/thometnanni/vantage">GitHub</a>.</p> <p><a class="link" href="https://fidel.computer/">Fidel Thomet</a> &amp; <a class="link" href="https://giacomo.website/">Giacomo Nanni</a></p></div></div> <!--[!--><!--]--> <div class="info bg-white overflow-x-auto" style="padding: 20px 0;"><div class="flex gap-6 items-center m-auto" style="padding: 0 10px; white-space: nowrap;"><img src="/bmbf.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/> <img src="/pf.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/> <img src="/openc.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/></div></div></div><!----><!--]--><!----><!--]--> <!--[!--><!--]--><!--]-->
+        information, or follow our development on <a class="link" href="https://github.com/search?q=topic%3Avantage+org%3Athometnanni&amp;type=Repositories&amp;s=updated&amp;o=desc">GitHub</a>.</p> <p><a class="link" href="https://fidel.computer/">Fidel Thomet</a> &amp; <a class="link" href="https://giacomo.website/">Giacomo Nanni</a></p></div></div> <!--[!--><!--]--> <div class="info bg-white overflow-x-auto" style="padding: 20px 0;"><div class="flex gap-6 items-center m-auto" style="padding: 0 10px; white-space: nowrap;"><img src="/bmbf.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/> <img src="/pf.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/> <img src="/openc.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/></div></div></div><!----><!--]--><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_vanlr2 = {
+					__sveltekit_1wgfzi7 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DNtWtWIk.js"),
-						import("./_app/immutable/entry/app.B6tzp9Lj.js")
+						import("./_app/immutable/entry/start.BL16GjNI.js"),
+						import("./_app/immutable/entry/app.FRg7JhgC.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
