--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     
 		<link href="./_app/immutable/assets/0.DnF3e-rb.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.9e_zEQBr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BL16GjNI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B65gTas-.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B0KsnnFX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CPY6N3EE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C9FWihKz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BP7RbBvP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.FRg7JhgC.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.COCjpd4r.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Yzwz9Dcx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BArpSiJ7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BvFvupHY.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.D_664fTU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/0waum1Sv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DAxBs-0D.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Br6meiaw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BY7w2Zq6.js"><!--1uha8ag--><meta name="description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:title" content="Vantage"/> <meta property="og:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:image" content="/cover.jpg"/> <meta property="twitter:card" content="summary_large_image"/> <meta property="twitter:title" content="Vantage"/> <meta property="twitter:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="twitter:image" content="/cover.jpg"/><!----><title>Vantage</title>
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents"><!--[--><!--[--><!----><!--[--><!----><div class="introContainer"><div class="fixed top-2 right-2 z-4 gap-1 flex flex-col items-end"><a href="https://thometnanni.github.io/vantage-renderer/" target="_blank" rel="noopener noreferrer" class="text-xs pointer-events-auto svelte-rl21xe">Renderer</a> <a href="mailto:hi@thometnanni.net" class="text-xs pointer-events-auto svelte-rl21xe">Contact us</a></div> <!--[!--><!--]--> <!--[!--><!--]--><!----> <svg id="svgContainer" xmlns="http://www.w3.org/2000/svg"><g class="box-pair"><g class="box box-group rotate"><rect x="0" y="0" width="300" height="200"></rect></g><g class="lines"><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line></g><g class="box box-group box"><rect x="30%" y="200" width="65%" height="460"></rect></g></g></svg> <div class="info p-2"><div><p><strong>Vantage</strong> is a web-based suite of <strong>spatial reconstruction toolkits for analysing photos and videos</strong>, designed for <strong>investigative journalists and fact-checkers</strong>,
+    <div style="display: contents"><!--[--><!--[--><!----><!--[--><!----><div class="introContainer"><div class="fixed top-2 right-2 z-4 gap-1 flex flex-col items-end"><a href="https://thometnanni.github.io/vantage-renderer/" target="_blank" rel="noopener noreferrer" class="text-xs pointer-events-auto svelte-rl21xe">Demo</a> <a href="mailto:hi@thometnanni.net" class="text-xs pointer-events-auto svelte-rl21xe">Contact us</a></div> <!--[!--><!--]--> <!--[!--><!--]--><!----> <svg id="svgContainer" xmlns="http://www.w3.org/2000/svg"><g class="box-pair"><g class="box box-group rotate"><rect x="0" y="0" width="300" height="200"></rect></g><g class="lines"><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line></g><g class="box box-group box"><rect x="30%" y="200" width="65%" height="460"></rect></g></g></svg> <div class="info p-2"><div><p><strong>Vantage</strong> is a web-based collection of <strong>spatial reconstruction toolkits for analysing photos and videos</strong>, designed for <strong>investigative journalists and fact-checkers</strong>,
         particularly those working in small teams or independently.</p></div> <div><p>Images and videos sourced from social media often represent crucial
         working material — and, in conflict areas, sometimes the only available
         source.</p> <p>This persuasive visual material demands rigorous verification: do the
@@ -42,15 +42,15 @@
 			
 			<script>
 				{
-					__sveltekit_1wgfzi7 = {
+					__sveltekit_1jg109o = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BL16GjNI.js"),
-						import("./_app/immutable/entry/app.FRg7JhgC.js")
+						import("./_app/immutable/entry/start.B0KsnnFX.js"),
+						import("./_app/immutable/entry/app.COCjpd4r.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
