--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <meta name="title" content="Vantage" />
     <meta name="description" content="Vantage reconstructs the spatial context of video recordings." />
     
-		<link href="./_app/immutable/assets/0.CNNWlhdl.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.9e_zEQBr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.iYTN-b4V.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CElvlrx-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C9FWihKz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BP7RbBvP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DaTXO71w.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Yzwz9Dcx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BArpSiJ7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BvFvupHY.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CpM3l-Cy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/0waum1Sv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DbO4_lI7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BY7w2Zq6.js"><!--1uha8ag--><meta name="description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:title" content="Vantage"/> <meta property="og:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:image" content="/cover.jpg"/> <meta property="twitter:card" content="summary_large_image"/> <meta property="twitter:title" content="Vantage"/> <meta property="twitter:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="twitter:image" content="/cover.jpg"/><!----><title>Vantage</title>
+		<link href="./_app/immutable/assets/0.B_JphBJG.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.Cm_p3qpX.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CtqX75tM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/hVygoCyp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/kha2TEoo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cy5vHcRT.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CutsGzDt.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DqvtfHgn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DpyPw7Lk.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D2_gR9hq.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DG7QkrpM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/2xbA1Vif.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DbysEzDI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BzbS523n.js"><!--1uha8ag--><meta name="description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:title" content="Vantage"/> <meta property="og:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:image" content="/cover.jpg"/> <meta property="twitter:card" content="summary_large_image"/> <meta property="twitter:title" content="Vantage"/> <meta property="twitter:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="twitter:image" content="/cover.jpg"/><!----><title>Vantage</title>
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents"><!--[--><!--[--><!----><!--[--><!----><div class="introContainer"><div class="max-w-480 m-auto"><div class="fixed top-2 right-2 z-4 gap-1 flex flex-col items-end"><a href="https://thometnanni.github.io/vantage-renderer/" target="_blank" rel="noopener noreferrer" class="text-xs pointer-events-auto svelte-rl21xe">Demo</a> <a href="mailto:hi@thometnanni.net" class="text-xs pointer-events-auto svelte-rl21xe">Contact us</a></div> <!--[!--><!--]--> <!--[!--><!--]--><!----> <svg id="svgContainer" xmlns="http://www.w3.org/2000/svg"><g class="box-pair"><g class="box box-group rotate"><rect x="0" y="0" width="300" height="200"></rect></g><g class="lines"><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line></g><g class="box box-group box"><rect x="30%" y="200" width="65%" height="460"></rect></g></g></svg></div> <div class="bg-white"><div class="max-w-480 m-auto"><div class="info p-2"><div><p><strong>Vantage</strong> is a web-based collection of <strong>spatial reconstruction toolkits for analysing photos and videos</strong>, designed for <strong>investigative journalists and fact-checkers</strong>,
+    <div style="display: contents"><!--[--><!--[--><!----><!--[--><!----><div class="introContainer"><div class="max-w-480 m-auto"><div class="fixed top-2 z-100 right-2 gap-1 flex flex-col items-end"><a href="https://thometnanni.github.io/vantage-stories/" target="_blank" rel="noopener noreferrer" class="text-xs pointer-events-auto svelte-rl21xe">Demos</a> <a href="mailto:hi@thometnanni.net" class="text-xs pointer-events-auto svelte-rl21xe">Contact us</a></div> <!--[!--><!--]--> <!--[!--><!--]--><!----> <svg id="svgContainer" xmlns="http://www.w3.org/2000/svg"><g class="box-pair"><g class="box box-group rotate"><rect x="0" y="0" width="300" height="200"></rect></g><g class="lines"><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line><line class="connector-line" stroke="var(--stroke, lime)" stroke-width="2"></line></g><g class="box box-group box"><rect x="30%" y="200" width="65%" height="460"></rect></g></g></svg></div> <div class="bg-white"><div class="max-w-480 m-auto"><div class="info p-2"><div><p><strong>Vantage</strong> is a web-based collection of <strong>spatial reconstruction toolkits for analysing photos and videos</strong>, designed for <strong>investigative journalists and fact-checkers</strong>,
             particularly those working in small teams or independently.</p></div> <div><p>Images and videos sourced from social media often represent crucial
             working material — and, in conflict areas, sometimes the only
             available source.</p> <p>This persuasive visual material demands rigorous verification: do
@@ -39,19 +39,19 @@
             interfaces.</p> <p>Reconstructions can be exported as <strong>videos or interactive visualizations</strong>, supporting
             visual storytelling in investigative journalism.</p></div> <div><p>Funded by <a class="link" href="https://prototypefund.de/project/vantage/" target="_blank" rel="noopener noreferrer">Prototype Fund</a>, <strong>Vantage is open-source and freely accessible</strong>,
             ensuring that investigative tools are within reach for everyone.</p> <p><a class="link" href="mailto:hi@thometnanni.net">Write us</a> for
-            more information, or follow our development on <a class="link" href="https://github.com/search?q=topic%3Avantage+org%3Athometnanni&amp;type=Repositories&amp;s=updated&amp;o=desc">GitHub</a>.</p> <p><a class="link" href="https://fidel.computer/">Fidel Thomet</a> &amp; <a class="link" href="https://giacomo.website/">Giacomo Nanni</a></p></div></div></div></div> <!--[!--><!--]--> <div class="info bg-white overflow-x-auto" style="padding: 20px 0;"><div class="flex gap-6 items-center m-auto" style="padding: 0 10px; white-space: nowrap;"><img src="/bmbf.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/> <img src="/pf.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/> <img src="/openc.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/></div></div></div><!----><!--]--><!----><!--]--> <!--[!--><!--]--><!--]-->
+            more information, or follow our development on <a class="link" href="https://github.com/search?q=topic%3Avantage+org%3Athometnanni&amp;type=Repositories&amp;s=updated&amp;o=desc">GitHub</a>.</p> <p><a class="link" href="https://fidel.computer/">Fidel Thomet</a> &amp; <a class="link" href="https://giacomo.website/">Giacomo Nanni</a></p></div></div></div></div> <section class="bg-white py-6"><div class="max-w-480"><div class="flex items-baseline justify-between gap-3"><h2 class="text-xl font-medium m-0 px-2 pt-4 pb-1">Stories</h2></div></div> <div class="stories-outer mt-3 svelte-zsqvxh" role="region" aria-label="stories"><div class="stories-inner svelte-zsqvxh"><!--[--><article><a href="https://thometnanni.github.io/vantage-stories/stories/silber" target="_blank" rel="noopener noreferrer" class="story-card svelte-zsqvxh" aria-label="Read story: Silbersteinstraße Graffitis 1983"><div class="story-media svelte-zsqvxh"><!--[--><video src="/stories/silberstein.mp4" autoplay loop muted playsinline preload="metadata" aria-label="Silbersteinstraße Graffitis 1983" class="svelte-zsqvxh"></video><!--]--></div> <div class="story-meta svelte-zsqvxh"><h3 class="story-title m-0 svelte-zsqvxh">Silbersteinstraße Graffitis 1983</h3></div></a></article><article><a href="https://thometnanni.github.io/vantage-stories/stories/g8" target="_blank" rel="noopener noreferrer" class="story-card svelte-zsqvxh" aria-label="Read story: Genoa G8 Clashes, 2001"><div class="story-media svelte-zsqvxh"><!--[!--><img src="/stories/g8.webp" alt="Genoa G8 Clashes, 2001" loading="lazy" class="svelte-zsqvxh"/><!--]--></div> <div class="story-meta svelte-zsqvxh"><h3 class="story-title m-0 svelte-zsqvxh">Genoa G8 Clashes, 2001</h3></div></a></article><article><a href="https://thometnanni.github.io/vantage-stories/stories/vajont" target="_blank" rel="noopener noreferrer" class="story-card svelte-zsqvxh" aria-label="Read story: Vajont Disaster"><div class="story-media svelte-zsqvxh"><!--[--><video src="/stories/vajont.mp4" autoplay loop muted playsinline preload="metadata" aria-label="Vajont Disaster" class="svelte-zsqvxh"></video><!--]--></div> <div class="story-meta svelte-zsqvxh"><h3 class="story-title m-0 svelte-zsqvxh">Vajont Disaster</h3></div></a></article><!--]--></div></div></section><!----> <!--[!--><!--]--> <div class="info bg-white overflow-x-auto" style="padding: 20px 0;"><div class="flex gap-6 items-center m-auto" style="padding: 0 10px; white-space: nowrap;"><img src="/bmbf.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/> <img src="/pf.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/> <img src="/openc.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/></div></div></div><!----><!--]--><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_f276yl = {
+					__sveltekit_16kuirc = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.iYTN-b4V.js"),
-						import("./_app/immutable/entry/app.DaTXO71w.js")
+						import("./_app/immutable/entry/start.CtqX75tM.js"),
+						import("./_app/immutable/entry/app.CutsGzDt.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
