--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <meta name="title" content="Vantage" />
     <meta name="description" content="Vantage reconstructs the spatial context of video recordings." />
     
-		<link href="./_app/immutable/assets/0.B_JphBJG.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.Cm_p3qpX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CtqX75tM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/hVygoCyp.js">
+		<link href="./_app/immutable/assets/0.vFmOlMMs.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.Bbxtv099.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DTyOwAmz.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ChNvzlw-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/kha2TEoo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Cy5vHcRT.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CutsGzDt.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C2n_PrAC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DqvtfHgn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DpyPw7Lk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D2_gR9hq.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DG7QkrpM.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CDiiypjP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/2xbA1Vif.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DbysEzDI.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.B74HGcB1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BzbS523n.js"><!--1uha8ag--><meta name="description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:title" content="Vantage"/> <meta property="og:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="og:image" content="/cover.jpg"/> <meta property="twitter:card" content="summary_large_image"/> <meta property="twitter:title" content="Vantage"/> <meta property="twitter:description" content="Vantage reconstructs the spatial context of video recordings."/> <meta property="twitter:image" content="/cover.jpg"/><!----><title>Vantage</title>
   </head>
   <body data-sveltekit-preload-data="hover">
@@ -39,19 +39,19 @@
             interfaces.</p> <p>Reconstructions can be exported as <strong>videos or interactive visualizations</strong>, supporting
             visual storytelling in investigative journalism.</p></div> <div><p>Funded by <a class="link" href="https://prototypefund.de/project/vantage/" target="_blank" rel="noopener noreferrer">Prototype Fund</a>, <strong>Vantage is open-source and freely accessible</strong>,
             ensuring that investigative tools are within reach for everyone.</p> <p><a class="link" href="mailto:hi@thometnanni.net">Write us</a> for
-            more information, or follow our development on <a class="link" href="https://github.com/search?q=topic%3Avantage+org%3Athometnanni&amp;type=Repositories&amp;s=updated&amp;o=desc">GitHub</a>.</p> <p><a class="link" href="https://fidel.computer/">Fidel Thomet</a> &amp; <a class="link" href="https://giacomo.website/">Giacomo Nanni</a></p></div></div></div></div> <section class="bg-white py-6"><div class="max-w-480"><div class="flex items-baseline justify-between gap-3"><h2 class="text-xl font-medium m-0 px-2 pt-4 pb-1">Stories</h2></div></div> <div class="stories-outer mt-3 svelte-zsqvxh" role="region" aria-label="stories"><div class="stories-inner svelte-zsqvxh"><!--[--><article><a href="https://thometnanni.github.io/vantage-stories/stories/silber" target="_blank" rel="noopener noreferrer" class="story-card svelte-zsqvxh" aria-label="Read story: Silbersteinstraße Graffitis 1983"><div class="story-media svelte-zsqvxh"><!--[--><video src="/stories/silberstein.mp4" autoplay loop muted playsinline preload="metadata" aria-label="Silbersteinstraße Graffitis 1983" class="svelte-zsqvxh"></video><!--]--></div> <div class="story-meta svelte-zsqvxh"><h3 class="story-title m-0 svelte-zsqvxh">Silbersteinstraße Graffitis 1983</h3></div></a></article><article><a href="https://thometnanni.github.io/vantage-stories/stories/g8" target="_blank" rel="noopener noreferrer" class="story-card svelte-zsqvxh" aria-label="Read story: Genoa G8 Clashes, 2001"><div class="story-media svelte-zsqvxh"><!--[!--><img src="/stories/g8.webp" alt="Genoa G8 Clashes, 2001" loading="lazy" class="svelte-zsqvxh"/><!--]--></div> <div class="story-meta svelte-zsqvxh"><h3 class="story-title m-0 svelte-zsqvxh">Genoa G8 Clashes, 2001</h3></div></a></article><article><a href="https://thometnanni.github.io/vantage-stories/stories/vajont" target="_blank" rel="noopener noreferrer" class="story-card svelte-zsqvxh" aria-label="Read story: Vajont Disaster"><div class="story-media svelte-zsqvxh"><!--[--><video src="/stories/vajont.mp4" autoplay loop muted playsinline preload="metadata" aria-label="Vajont Disaster" class="svelte-zsqvxh"></video><!--]--></div> <div class="story-meta svelte-zsqvxh"><h3 class="story-title m-0 svelte-zsqvxh">Vajont Disaster</h3></div></a></article><!--]--></div></div></section><!----> <!--[!--><!--]--> <div class="info bg-white overflow-x-auto" style="padding: 20px 0;"><div class="flex gap-6 items-center m-auto" style="padding: 0 10px; white-space: nowrap;"><img src="/bmbf.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/> <img src="/pf.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/> <img src="/openc.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/></div></div></div><!----><!--]--><!----><!--]--> <!--[!--><!--]--><!--]-->
+            more information, or follow our development on <a class="link" href="https://github.com/search?q=topic%3Avantage+org%3Athometnanni&amp;type=Repositories&amp;s=updated&amp;o=desc">GitHub</a>.</p> <p><a class="link" href="https://fidel.computer/">Fidel Thomet</a> &amp; <a class="link" href="https://giacomo.website/">Giacomo Nanni</a></p></div></div></div></div> <section class="bg-white py-6"><div class="max-w-480"><div class="flex items-baseline justify-between gap-1"><h2 class="text-xl font-medium m-0 px-2 pt-4 pb-1">Stories</h2></div></div> <div class="stories-outer mt-3 svelte-zsqvxh" role="region" aria-label="stories"><div class="stories-inner svelte-zsqvxh"><!--[--><article><a href="https://thometnanni.github.io/vantage-stories/stories/silber" target="_blank" rel="noopener noreferrer" class="story-card svelte-zsqvxh" aria-label="Read story: Silbersteinstraße Graffitis 1983"><div class="story-media svelte-zsqvxh"><!--[--><video src="/stories/silberstein.mp4" autoplay loop muted playsinline preload="metadata" aria-label="Silbersteinstraße Graffitis 1983" class="svelte-zsqvxh"></video><!--]--></div> <div class="story-meta svelte-zsqvxh"><h3 class="story-title m-0 svelte-zsqvxh">Silbersteinstraße Graffitis 1983</h3></div></a></article><article><a href="https://thometnanni.github.io/vantage-stories/stories/g8" target="_blank" rel="noopener noreferrer" class="story-card svelte-zsqvxh" aria-label="Read story: Genoa G8 Clashes, 2001"><div class="story-media svelte-zsqvxh"><!--[!--><img src="/stories/g8.webp" alt="Genoa G8 Clashes, 2001" loading="lazy" class="svelte-zsqvxh"/><!--]--></div> <div class="story-meta svelte-zsqvxh"><h3 class="story-title m-0 svelte-zsqvxh">Genoa G8 Clashes, 2001</h3></div></a></article><article><a href="https://thometnanni.github.io/vantage-stories/stories/vajont" target="_blank" rel="noopener noreferrer" class="story-card svelte-zsqvxh" aria-label="Read story: Vajont Disaster"><div class="story-media svelte-zsqvxh"><!--[--><video src="/stories/vajont.mp4" autoplay loop muted playsinline preload="metadata" aria-label="Vajont Disaster" class="svelte-zsqvxh"></video><!--]--></div> <div class="story-meta svelte-zsqvxh"><h3 class="story-title m-0 svelte-zsqvxh">Vajont Disaster</h3></div></a></article><!--]--></div></div></section><!----> <!--[!--><!--]--> <div class="info bg-white overflow-x-auto" style="padding: 20px 0;"><div class="flex gap-6 items-center m-auto" style="padding: 0 10px; white-space: nowrap;"><img src="/bmbf.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/> <img src="/pf.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/> <img src="/openc.svg" alt="" class="object-contain flex-shrink-0" style="max-width: 30%; max-height: 150px;"/></div></div></div><!----><!--]--><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_16kuirc = {
+					__sveltekit_1x2lu8r = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CtqX75tM.js"),
-						import("./_app/immutable/entry/app.CutsGzDt.js")
+						import("./_app/immutable/entry/start.DTyOwAmz.js"),
+						import("./_app/immutable/entry/app.C2n_PrAC.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
