--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     
 		<link href="./_app/immutable/assets/0.vFmOlMMs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.Bbxtv099.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DTyOwAmz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ChNvzlw-.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.cqMxMFww.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BOKGhy2K.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/kha2TEoo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Cy5vHcRT.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C2n_PrAC.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app._d17UeWP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DqvtfHgn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DpyPw7Lk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D2_gR9hq.js">
@@ -43,15 +43,15 @@
 			
 			<script>
 				{
-					__sveltekit_1x2lu8r = {
+					__sveltekit_pdthcj = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DTyOwAmz.js"),
-						import("./_app/immutable/entry/app.C2n_PrAC.js")
+						import("./_app/immutable/entry/start.cqMxMFww.js"),
+						import("./_app/immutable/entry/app._d17UeWP.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
